hw12-web-server - исправление замечаний

--- a/hw12-web-server/src/main/resources/web/index.html
+++ b/hw12-web-server/src/main/resources/web/index.html
@@ -27,55 +27,7 @@
     </table>
     <button v-on:click="loadData">Загрузить данные</button>
 </div>
-<script>
-    var app = new Vue({
-        el: '#app',
-        data: {
-            newUser: {
-                name: "",
-                age: 0,
-                address: {
-                    street: ""
-                },
-                phones: [
-                    {number: ""}
-                ],
-            },
-            users: []
-        },
-        methods: {
-            loadData() {
-                fetch("/users")
-                    .then(resp => {
-                        return resp.json()
-                    })
-                    .then(json => {
-                        this.users = json;
-                    })
-            },
-            saveUser() {
-                fetch("/users", {
-                    method: "POST",
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify(this.newUser)
-                })
-                    .then(resp => {
-                        if (resp.status === 200) {
-                            this.loadData();
-                            alert("Created")
-                        } else {
-                            alert("Error " + resp.status)
-                        }
-                    })
-            }
-        },
-        beforeMount() {
-            this.loadData()
-        },
-    })
-</script>
+<script src="script.js"></script>
 
 </body>
 </html>
