--- a/hw16-message-server/web-server/src/main/resources/static/index.html
+++ b/hw16-message-server/web-server/src/main/resources/static/index.html
@@ -9,10 +9,10 @@
 <div id="app">
     <div style="border: red 2px">
         <p>Новый пользователь</p>
-        <input type="text" v-model="newUser.userName" placeholder="Имя"/><br>
-        <input type="number" v-model="newUser.userAge" placeholder="Возраст"><br>
-        <input type="text" v-model="newUser.userAddress" placeholder="Адрес"><br>
-        <div v-for="phone in newUser.userPhones">
+        <input type="text" v-model="newUser.name" placeholder="Имя"/><br>
+        <input type="number" v-model="newUser.age" placeholder="Возраст"><br>
+        <input type="text" v-model="newUser.address" placeholder="Адрес"><br>
+        <div v-for="phone in newUser.phones">
             <input type="text" v-model="phone.number" placeholder="Телефон"><br>
         </div>
 
@@ -21,8 +21,8 @@
     <table>
         <p>Список пользователей</p>
         <tr v-for="user in users">
-            <td>{{ user.userName }}</td>
-            <td>{{ user.userPhones }}</td>
+            <td>{{ user.name }}</td>
+            <td>{{ user.phones }}</td>
         </tr>
     </table>
     <button v-on:click="loadData">Загрузить данные</button>
